# CourseLearning

./: readme.md
ConvexHull/: CMakeLists.txt  main.cpp  readme.md
ConvexHull/include/: conhull.h  handler.h
ConvexHull/pyDrawer/: ch.csv  drawer.py  op.csv
ConvexHull/src/: conhull.cpp  convex.cpp  handler.cpp
GPS-StaPos-solver/: CMakeLists.txt
Machine-Learning/: CMakeLists.txt  main.cpp  readme.md
Machine-Learning/bayes/include/: naiveBayes.hpp
Machine-Learning/clustering/include/: kMeans.hpp  maxMinDistance.hpp
Machine-Learning/docs/: structure.emmx
Machine-Learning/helper/include/: gradDesc.hpp  prinComAnaly.hpp
Machine-Learning/pyDrawer/clustering/: sample2d.csv  sample3d.csv  scatter2d.py  scatter3d.py
Machine-Learning/pyDrawer/helper/: gd.csv  gd.py  pca.py  pca_origin.csv  pca_res.csv
Machine-Learning/pyDrawer/regression/: reegress2.py  regress.py  regression.csv  sample.csv
Machine-Learning/regression/include/: regression.hpp
Machine-Learning/sample/include/: sample.hpp  sampleProperty.hpp  sampleset.hpp
Machine-Learning/statistics/include/: statistic.hpp
PDR/: readme.md  (+1 more)
PDR/Juster/: CMakeLists.txt  readme.md
PDR/Juster/bash/: makerun.sh
PDR/Juster/data/: acce.csv  akalman.csv  hma.csv  orientation.csv  signal.csv
PDR/Juster/pyDrawer/: ema.py  hma.py  signal_.py  stepFrequenct.py
PDR/Juster/src/: akalman.cpp  ekalman.cpp  hma.cpp  kalman.cpp  signal.cpp
PyGeo/: CMakeLists.txt  main.cpp  readme.md
PyGeo/data/: file_structure.txt  global_1d.csv  statistic.txt  taiwan_5m.csv
PyGeo/data/inter/: altFile_inter.txt  gravityFile_inter.txt  layerCorrFile_inter.txt  originalGAFile_inter.txt  simpleBouguerGAFile_inter.txt  spatialCorrFile_inter.txt  spatialGAFile_inter.txt
PyGeo/data/origin/: altFile.txt  gravityFile.txt  interploation  layerCorrFile.txt  originalGAFile.txt  simpleBouguerGAFile.txt  spatialCorrFile.txt  spatialGAFile.txt
PyGeo/images/xmind/: GRSGravity.emmx  Gravity Anomality Part.emmx  Legendre Part.emmx
PyGeo/include/: gravityAnomal.h  gravityField.h  legendre.h  parameter.h  surpharmonic.h
PyGeo/pyDrawer/: location.py  otherData.py  reader.py
PyGeo/src/: gravityAnomal.cpp  gravityField.cpp  legendre.cpp  parameter.cpp  surpharmonic.cpp
UWBInDoor/: CMakeLists.txt  main.cpp  readme.md
UWBInDoor/configs/: UWBParams.json
UWBInDoor/data/: move1_RTLS_log.txt  move2_RTLS_log.txt  reference2_RTLS_log.txt  reference7_RTLS_log.txt  reference9_RTLS_log.txt  static1_RTLS_log.txt  static2_RTLS_log.txt  static3_RTLS_log.txt
UWBInDoor/helper/: UWB file structure.emmx  system.emmx
UWBInDoor/include/: UWBContext.h  taylorSeries.h
UWBInDoor/pyDrawer/: move.py  move1.txt  move2.txt  static.py  static1.txt  static2.txt  static3.txt  static_ceres.txt  static_linear.txt  static_newtonLS.txt  static_sequential.txt  static_taylorSeries.txt
UWBInDoor/quwb/uwb/: ceresSolver.h  datatime.h  helper.cpp  helper.h  helper.ui  linear.h  main.cpp  newtonLS.h  sequential.h  uwb.pro  uwbwin.cpp  uwbwin.h  uwbwin.ui
UWBInDoor/src/: UWBContext.cpp  ceresSolver.cpp  linear.cpp  newtonLS.cpp  sequential.cpp  taylorSeries.cpp
curveCal/: CMakeLists.txt  main.cpp  readme.md
curveCal/docs/: struct.emmx
curveCal/include/: handler.h
curveCal/pyDrawer/: drawer1.py  drawer2.py  output_part1.csv  output_part2.csv  output_part3.csv  output_part4.csv  output_part5.csv
curveCal/qcurve/build-curve-Desktop_Qt_6_1_3_GCC_64bit-Debug/: Makefile  curve  moc_mainwindow.cpp  ui_mainwindow.h
curveCal/qcurve/curve/: curve.pro  handler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  utility.hpp
curveCal/src/: handler.cpp
data-structure/homework/data-structure/: CMakeLists.txt  readme.md
data-structure/homework/data-structure/img/: graph  hfmt
image-fusion/src/: CMakeLists.txt  evaluate.cpp  fusion.cpp  main.cpp
image-fusion/src/include/: fusion.h  muti_thread.h
image-fusion/src/src/: fusion.cpp  muti_thread.cpp
nav-spp/src/: CMakeLists.txt  main.cpp
nav-spp/src/include/: base_convert.hpp  config.h  coordinate.h  data_parser.h  datetime.h  novatel_oem.h  type_def.hpp
nav-spp/src/include/utils/: base_cast.hpp  buffer.hpp  enum_cast.hpp
nav-spp/src/src/: config.cpp  coordinate.cpp  data_parser.cpp  datetime.cpp  novatel_oem.cpp
nav-spp/test/: CMakeLists.txt  testmain.cpp
nav-spp/test/include/: test_base_cast.hpp  test_base_convert.hpp  test_config.hpp  test_coordinate.hpp  test_data_parser.hpp  test_datetime.hpp  test_enum_cast.hpp
optimization/: CMakeLists.txt  readme.md
optimization/src/: dichSearch.cpp  eqinterSearch.cpp  fibonSearch.cpp  fletreeConj.cpp  glodsectSearch.cpp  gradDescent.cpp  newtonMethod.cpp  quadInter.cpp
resectionForInDoor/: CMakeLists.txt  main.cpp  readme.md
resectionForInDoor/configs/: imgPoints.json  innerParams.json  objPoints.json  plane2world.json
resectionForInDoor/docs/: calResult.json  config.emmx  drawer.py  prj_struct.txt  system.emmx
resectionForInDoor/docs/CSL_PHONE/imgs_target/: INNER_PARAMS.json  POS_6_PIEXL.json  POS_7_PIEXL.json  POS_8_PIEXL.json
resectionForInDoor/include/: configInit.h  handler.h
resectionForInDoor/src/: configInit.cpp  handler.cpp
section-inspection/src/: CMakeLists.txt  main.cpp
section-inspection/src/include/: circle.h  icp.h  sampling.hpp  sline.h
section-inspection/src/src/: circle.cpp  icp.cpp  sline.cpp
tinCreator/: CMakeLists.txt  main.cpp  readme.md
tinCreator/include/: tin.h
tinCreator/pyDrawer/: drawer.py  pf.csv  tf.csv  vf.csv  voronoi.py
tinCreator/src/: tin.cpp
visual-slam/chp1-pre-slam/: CMakeLists.txt  readme.md
visual-slam/chp1-pre-slam/include/: helloslam.h
visual-slam/chp3-rigid-motion/: CMakeLists.txt  readme.md
visual-slam/chp4-lee-group/: CMakeLists.txt  readme.md
visual-slam/chp4-lee-group/src/: leegroup.cpp
visual-slam/chp5-camera-model/: CMakeLists.txt  readme.md
visual-slam/chp5-camera-model/src/: depthPointCloud.cpp  rgbd.cpp  undistorted.cpp  useopencv.cpp
visual-slam/chp6-optimization/: CMakeLists.txt  readme.md
visual-slam/chp6-optimization/src/: gauss_newton.cpp  use_ceres.cpp  use_g2o.cpp
(+187 files in other folders)
